deployment_image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman-container
        image: ghcr.io/franciscocunha55/pacman:2.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
