service_pacman.yaml
apiVersion: v1
kind: Service
metadata:  
  name: pacman
spec:
  selector:    
    app: pacman
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
